Suppression commentaire inutile
* [UPD] launch_server.sh